[gd_scene load_steps=2 format=3 uid="uid://ce5yf1g66vj4o"]

[ext_resource type="Script" uid="uid://b4jo80cbjjjpj" path="res://UI/Buttons/LongPressButton.gd" id="1_0i5vg"]

[node name="LongPressButton" type="Button"]
editor_description = "A Button that requires confirmation by keeping it pressed for a specified time."
script = ExtResource("1_0i5vg")

[node name="Timer" type="Timer" parent="."]
one_shot = true
ignore_time_scale = true

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(1, 0.8, 0.2, 0.5)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
max_value = 1.0
show_percentage = false

[connection signal="button_down" from="." to="." method="onButtonDown"]
[connection signal="button_up" from="." to="." method="onButtonUp"]
[connection signal="pressed" from="." to="." method="onPressed"]
[connection signal="timeout" from="Timer" to="." method="onTimer_timeout"]
